<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="calculate">calculate</string>
    <string name="clear">clear</string>
    <string name="average_speed_km_h">Average speed (km/h)</string>
    <string name="Distanceandtime">Distance and time are required.</string>
    <string name="TimeZero">Time must be greater than zero.</string>
    <string name="Speed">Speed is over limit!</string>
</resources>